<resources>
    <string name="app_name">Vonergy</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="connectionError">Connection error!</string>
    <string name="error">Error!</string>

    // Login
    <string name="vonergy">Vonergy</string>
    <string name="login">Login</string>
    <string name="cpf">CPF</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalidLogin">Invalid login!</string>
    <string name="welcomeText">Enter your CPF and password to enter</string>
    <string name="savePassword">Sign in automatically</string>

    // Config
    <string name="settings">Settings</string>
    <string name="serverIP">Server IP</string>
    <string name="save">Save settings</string>
    <string name="savedMsg">Settings saved successfully.</string>

    // Profile
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="nome">Name</string>
    <string name="M">M</string>
    <string name="Logradouro">Street</string>
    <string name="Bairro">Neighborhood</string>
    <string name="Cidade">City</string>
    <string name="Numero">Number</string>
    <string name="Referencia">Reference Point</string>
    <string name="Cep">CEP</string>
    <string name="Complemento">Complement</string>
    <string name="UF">State</string>
    <string name="Telefone">Phone</string>
    <string name="Celular">Cellphone</string>
    <string name="rg">RG</string>
    <string name="orgao_expedidor">RG\'s Agency</string>
    <string name="data_nasc">Date of Birth</string>
    <string name="nome_mae">Mother\'s Name</string>
    <string name="nome_pai">Father\'s Name</string>
    <string name="estado_civil">Marital Status</string>
    <string name="solteiro">Single</string>
    <string name="casado">Married</string>
    <string name="divorciado">Divorced</string>
    <string name="viuvo">Widowed</string>
    <string name="rua">Street</string>
    <string name="numero">House Number</string>

    // Menu
    <string name="home">Página Inicial</string>
    <string name="history">History</string>
    <string name="hourly_history">Hourly</string>
    <string name="daily_history">Daily</string>
    <string name="weekly_history">Weekly</string>
    <string name="monthly_history">Monthly</string>
    <string name="annual_history">Annual</string>
    <string name="list_user">User list</string>
    <string name="list_device">Device list</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Logout</string>
    <string name="confirmlogout">Are you sure you want to logout?</string>

    // Consumption
    <string name="consumo_atual">Current Consumption</string>
    <string name="consumo">Consumption</string>
    <string name="buscando">Seeking</string>
    <string name="cost">Cost: R$%,2f</string>
    <string name="kilowatt">%,1f kWh</string>
    <string name="consumptionError">Error fetching consumption!</string>
    <string name="noConsumption">There is no consumption data!</string>

    // Device
    <string name="model">Model:</string>
    <string name="brand">Brand:</string>
    <string name="minimumPower">Min. Power:</string>
    <string name="maximumPower">Max. Power:</string>
    <string name="minimumVoltage">Min. Voltage:</string>
    <string name="maximumVoltage">Max. Voltage:</string>
    <string name="minimalCurrent">Min. Current:</string>
    <string name="maximumCurrent">Max. Current:</string>
    <string name="maximumCost">Max. Cost:</string>
    <string name="deviceID">Id Device:</string>
    <string name="deviceSerial">Serial Number:</string>
    <string name="turn_on_off">Turn On/Off:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="url">vonergyapi.azurewebsites.net</string>
    <string name="edt_username">Email</string>
    <string name="edt_password">Password</string>
    <string name="bnt_login">Login</string>
    <string name="consumoTempoReal">Your consumption now</string>
    <string name="consumoDiario">Your daily consumption</string>
    <string name="consumoPorHora">Your consumption per hour</string>
    <string name="consumoMensal">Your monthly consumption</string>
    <string name="consumoSemanal">Your weekly consumption</string>
    <string name="limite_minino">Minimum limit (kwh)</string>
    <string name="limite_medio">Middle limit (kwh)</string>
    <string name="limite_maximo">Maximum limit (kwh)</string>
    <string name="configurar">Set up</string>
    <string name="aguarde">Por favor, aguarde!</string>
    <string name="minimumCurrent">Min Current</string>
</resources>