<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_hourly_history"
            android:title="@string/hourly_history" />
        <item
            android:id="@+id/nav_daily_history"
            android:title="@string/daily_history" />
        <item
            android:id="@+id/nav_monthly_history"
            android:title="@string/monthly_history" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>
</menu>
