<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_list_users"
        android:icon="@drawable/ic_list_users"
        android:title="@string/list_user"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_list_devices"
        android:icon="@drawable/ic_devices"
        android:title="@string/list_device"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sair"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>




</menu>