<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="40sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/model"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/model"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/model_value"

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/brand"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/brand_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/minimumPower"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/minimumPower"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView

            android:id="@+id/minimumPower_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/maximumPower"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/maximumPower"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/maximumPower_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/minimumVoltage"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/minimumVoltage"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/minimumVoltage_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/maximumVoltage"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/maximumVoltage"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/maximumVoltage_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/minimalCurrent"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/minimalCurrent"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/minimalCurrent_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/maximumCurrent"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/maximumCurrent"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/maximumCurrent_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>