<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".view.DetailDeviceActivity">

    <TextView
        android:id="@+id/name_device_value_dt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_gravity="left"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/model_dt"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/model"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/model_value_dt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/deviceID_dt"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/deviceID"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/deviceID_value_dt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/maxCost_dt"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/maximumCost"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView

            android:id="@+id/maxCost_value_dt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/serialNumber_dt"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/deviceSerial"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/serialNumber_value_dt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_on_off_dt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

    </LinearLayout>
</LinearLayout>