<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".view.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/txtLimiteMinimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingBottom="@dimen/small_padding"
                android:text="@string/limite_minino"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtLimiteMinimo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:padding="@dimen/small_padding" />

            <TextView
                android:id="@+id/txtLimiteMedio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingBottom="@dimen/small_padding"
                android:text="@string/limite_medio"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtLimiteMedio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:padding="@dimen/small_padding" />

            <TextView
                android:id="@+id/txtLimiteMaximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingBottom="@dimen/small_padding"
                android:text="@string/limite_maximo"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtLimiteMaximo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:padding="@dimen/small_padding" />

            <Button
                android:id="@+id/btnConfigurar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_padding"
                android:background="@drawable/click_button_blue"
                android:text="@string/configurar"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="@dimen/text_medium" />


        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>